# yaml-viz

./: .gitignore  README.md  docker-compose.yml  pip-install-WINDOWS.txt  pip-install-win32.txt  pyproject.toml  requirements.txt  run-pip.bat  run-pip.sh  run.sh  test-windows.md
.claude/: settings.local.json
docker/: Dockerfile
docs/: architecture.md  compatibility.md
gif-demo/: create-interactive-gif.py  demo.bat  demo.sh
src/: app.py  export_utils.py  form_generator.py  settings.py  styles.css  template_manager.py  ui_components.py
templates/: pp.yml  projektplan copy.yml  projektplan.yml  projektplan_complex.yml  test-complex-objects.yml  test.yml
tests/: test-complex.yml  test-different.yml  test-flat.yml  test-hierarchical.yml  test-mixed.yml  test-nested.yml  test_form_generator.py
